<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_plant_placeholder"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_camera"
            android:title="@string/scan_title" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_outline"
            android:title="@string/nav_favorites" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_safe"
            android:title="@string/nav_about" />

    </group>

    <item android:title="Conta">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_lock"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
